--- a/Index.html
+++ b/Index.html
@@ -53,7 +53,7 @@
 </ol>
 <hr size="3" noshade />
 <h3><a href="file:///D:/MY%20Second%20Website/HTML%20Personal%20Site/Experiences.html"/a>Experiences</h3>
-
+  </body>
 
 
 
